--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -2,7 +2,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-image: url("../../assets/images/header.jpg");
+    background-image: url("/assets/images/header.jpg");
     position: relative;
     @include ipad {}
     @include ipad {
