--- a/assets/sass/layout/_section_looking.scss
+++ b/assets/sass/layout/_section_looking.scss
@@ -4,7 +4,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    background-image: url("../../assets/images/looking_background.jpg");
+    background-image: url("/assets/images/looking_background.jpg");
     @include ipad {
         margin-top: 20px;
     }
