--- a/assets/sass/pages/home.scss
+++ b/assets/sass/pages/home.scss
@@ -18,7 +18,7 @@ body {
 
 @font-face {
     font-family: $my_font;
-    src: url(/assets/font/Josefin_Sans_normal.woff2);
+    src: url(../font/Josefin_Sans_normal.woff2);
 }
 
 
